--- a/mvc-demo.web/src/main/webapp/WEB-INF/web.xml
+++ b/mvc-demo.web/src/main/webapp/WEB-INF/web.xml
@@ -13,8 +13,7 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			classpath:spring-config/applicationContext-*.xml,
-			classpath:spring-config/application.xml
+			classpath*:spring-config/applicationContext*.xml
 		</param-value>
 	</context-param>
 	<!-- 设计路径变量值 -->
