--- a/mvc-demo.web/src/main/webapp/WEB-INF/web.xml
+++ b/mvc-demo.web/src/main/webapp/WEB-INF/web.xml
@@ -40,6 +40,24 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+	<!--分页-->
+	<filter>
+		<filter-name>pageFilter</filter-name>
+		<filter-class>me.allensea.controller.filter.PageFilter</filter-class>
+		<init-param>
+			<param-name>pageNo</param-name>
+			<param-value>1</param-value>
+		</init-param>
+		<init-param>
+			<param-name>pageRow</param-name>
+			<param-value>20</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>pageFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
