--- a/mvc-demo.web/pom.xml
+++ b/mvc-demo.web/pom.xml
@@ -14,5 +14,11 @@
 			<artifactId>mvc-demo.service</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>2.3.23</version>
+		</dependency>
 	</dependencies>
 </project>
